--- a/styleSheet.css
+++ b/styleSheet.css
@@ -38,3 +38,29 @@ button:hover{
   background-color:#3474d9;
   border-style: inset;
 }
+#nav{
+  width:100%;
+  height:100px;
+  background-color: #4287f5;
+}
+.pagelink{
+  color:white;
+  font-weight:bold;
+  width:45%;
+  float:left;
+  padding:40px;
+  text-align:center;
+  text-decoration: none;
+}
+.pagelink a{
+  color:white;
+  text-decoration: none;
+}
+.pagelink:hover{
+  cursor:pointer;
+  background-color:#3474d9;
+}
+#header h1{
+  color:#4287f5;
+  text-decoration: none;
+}
