--- a/styleSheet.css
+++ b/styleSheet.css
@@ -46,9 +46,9 @@ button:hover{
 .pagelink{
   color:white;
   font-weight:bold;
-  width:20%;
+  width:40%;
   float:left;
-  padding:40px;
+  padding:5%;
   text-align:center;
   text-decoration: none;
 }
