--- a/styleSheet.css
+++ b/styleSheet.css
@@ -40,13 +40,14 @@ button:hover{
 }
 #nav{
   width:100%;
-  height:100px;
+  height:10%;
   background-color: #4287f5;
 }
 .pagelink{
   color:white;
   font-weight:bold;
   width:40%;
+  height:2.5%
   float:left;
   padding:5%;
   text-align:center;
