--- a/styleSheet.css
+++ b/styleSheet.css
@@ -52,6 +52,7 @@ button:hover{
   padding:5%;
   text-align:center;
   text-decoration: none;
+  background-color:#4287f5;
 }
 .pagelink a{
   color:white;
