--- a/styleSheet.css
+++ b/styleSheet.css
@@ -40,15 +40,15 @@ button:hover{
 }
 #nav{
   width:100%;
-  height:10%;
+  height:100px;
   background-color: #4287f5;
 }
 .pagelink{
   color:white;
   font-weight:bold;
-  width:40%;
+  width:45%;
   float:left;
-  padding:5%;
+  padding:2.5%;
   text-align:center;
   text-decoration: none;
 }
