--- a/styleSheet.css
+++ b/styleSheet.css
@@ -3,7 +3,7 @@ body{
   padding: 20px;
 }
 
-img{
+img, h2{
   padding:1%
 }
 iframe{padding:1%}
@@ -38,19 +38,20 @@ button:hover{
   background-color:#3474d9;
   border-style: inset;
 }
-#nav{
+/* #nav{
   width:100%;
   height:100px;
   background-color: #4287f5;
-}
+} */
 .pagelink{
   color:white;
   font-weight:bold;
-  width:45%;
+  width:30%;
   float:left;
-  padding:2.5%;
+  padding:1.3%;
   text-align:center;
   text-decoration: none;
+  background-color: #4287f5;
 }
 .pagelink a{
   color:white;
@@ -60,7 +61,7 @@ button:hover{
   cursor:pointer;
   background-color:#3474d9;
 }
-#header h1{
+#header a{
   color:#4287f5;
   text-decoration: none;
 }
