--- a/styleSheet.css
+++ b/styleSheet.css
@@ -7,14 +7,14 @@ img, h2{
   padding:1%
 }
 iframe{padding:1%}
-p{padding: 1%}
+p{padding: 2%}
 .padding{padding:1%}
 .nopadding{padding:0px}
 .float{float:left;}
 .clear{clear:both;}
 .height{height:250px}
 .right{float:right}
-h1,h2,h3,b{color:#4287f5}
+h1,h2,h3,b, figcaption{color:#4287f5}
 .kelly{height:400;
 width:100%}
 .rightclear{clear:right;}
@@ -64,4 +64,15 @@ button:hover{
 #header a{
   color:#4287f5;
   text-decoration: none;
+}
+div #hiddenMessage{
+  width:100%;
+}
+.tourPic img{
+  width:100%;
+  height:275px
+}
+.tourPic{
+  width:25%;
+  float:left;
 }
