--- a/styleSheet.css
+++ b/styleSheet.css
@@ -38,6 +38,7 @@ button:hover{
   background-color:#3474d9;
   border-style: inset;
 }
+
 /* #nav{
   width:100%;
   height:100px;
@@ -75,4 +76,8 @@ div #hiddenMessage{
 .tourPic{
   width:25%;
   float:left;
+}
+ul{
+  list-style-type: circle;
+  color: #4287f5
 }
